--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,6 +129,7 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/UMG/HUD/Map/Map.Map
 OpenAssetsAtExit=/Game/UMG/HUD/GameHUD.GameHUD
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
@@ -1039,7 +1040,7 @@ EdGraph.Inputs=True
 EdGraph.Outputs=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
-K2Node_FunctionEntry.Outputs=False
+K2Node_FunctionEntry.Outputs=True
 Blueprint.ClassOptions=True
 Blueprint.BlueprintOptions=True
 Blueprint.Packaging=True
@@ -1167,6 +1168,21 @@ K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
+ElevationMap_C.Designer=True
+Map_C.Appearance=True
+Map_C.Input=True
+Map_C.Interaction=True
+Map_C.Behavior=True
+Map_C.Render Transform=True
+Map_C.Performance=True
+Map_C.Clipping=True
+Map_C.Navigation=True
+Map_C.Localization=True
+Map_C.Designer=True
+Map_C.Layout=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+Map_C.Default=True
 
 [/Script/UnrealEd.ClassViewerSettings]
 DisplayInternalClasses=True
@@ -1176,11 +1192,11 @@ Input=False
 Lists=False
 Misc=False
 Optimization=False
-Panel=True
+Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
-User Created=True
+User Created=False
 Common=False
 
 [DetailCustomWidgetExpansion]
@@ -1259,14 +1275,26 @@ ThirdPersonCharacter_C=StructProperty.DefaultValueCategory.None,
 ObjectProperty=StructProperty.DefaultValueCategory.None,
 SetMapVisibility=StructProperty.DefaultValueCategory.None,
 SetMapVisibility_5=StructProperty.DefaultValueCategory.None,
+ElevationMap_C=StructProperty.DefaultValueCategory.None,
+IntProperty=StructProperty.DefaultValueCategory.None,
+ArrayProperty=StructProperty.DefaultValueCategory.None,
+SetMapState=StructProperty.DefaultValueCategory.None,
+SetMapState_2=StructProperty.DefaultValueCategory.None,
+ClampMapSize_3=StructProperty.DefaultValueCategory.None,
+ClampMapSize=StructProperty.DefaultValueCategory.None,
+SetMapState_5=StructProperty.DefaultValueCategory.None,
+EnumProperty=StructProperty.DefaultValueCategory.None,
+Map_C=StructProperty.DefaultValueCategory.None,
+ClampMapSize_4=StructProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/UMG/HUD/GameHUD
-MRUItem2=/Game/UMG/HUD/Map/MapDataStruct
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonHUD
-MRUItem4=/Game/UMG/HUD/Map/ElevationMap
-MRUItem5=/Game/UMG/HUD/MapInterface
+MRUItem1=/Game/UMG/HUD/Map/Map
+MRUItem2=/Game/UMG/HUD/GameHUD
+MRUItem3=/Game/UMG/HUD/Map/ElevationMap
+MRUItem4=/Game/UMG/HUD/Map/MapDataStruct
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonHUD
+MRUItem6=/Game/UMG/HUD/MapInterface
 
 [AssetEditorToolkitTabLocation]
 /Game/UMG/HUD/Map/MapDataStruct.MapDataStruct=0
@@ -1326,10 +1354,10 @@ FrameNumberDisplayFormat=Seconds
 CurveVisibility=SelectedCurves
 
 [DetailPropertyExpansion]
-Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
-Object=
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
 ElevationMap_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget=
@@ -1342,6 +1370,14 @@ ToggleMap_5=
 GameHUD_C=
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+SetMapState=
+SetMapState_2=
+ClampMapSize_3="\"Struct.fYValue\" "
+ClampMapSize=
+SetMapState_5=
+Button="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+Map_C=
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1363,5 +1399,8 @@ K2Node_FunctionEntry.Graph=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+
+[MessageLog]
+LastLogListing=PIE
 
 
