Add Health Functionality
- Add Health and Mana bars
- Functionality to set
- imported to HUD

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -120,7 +120,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UMG/HUD
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -129,9 +129,10 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 OpenAssetsAtExit=/Game/UMG/HUD/Map/Map.Map
 OpenAssetsAtExit=/Game/UMG/HUD/GameHUD.GameHUD
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/UMG/HUD/PlayerInfo/PlayerInfo.PlayerInfo
 
 [RootWindow]
 ScreenPosition=X=1963.000 Y=0.000
@@ -1183,6 +1184,44 @@ Map_C.Layout=True
 ByteProperty.Variable=True
 ByteProperty.DefaultValueCategory=True
 Map_C.Default=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+K2Node_SwitchInteger.PinOptions=True
+PlayerInfo_C.Default=True
+PlayerInfo_C.Appearance=True
+PlayerInfo_C.Designer=True
+PlayerInfo_C.Input=True
+PlayerInfo_C.Interaction=True
+PlayerInfo_C.Performance=True
+PlayerInfo_C.Layout=True
+PlayerInfo_C.Behavior=True
+PlayerInfo_C.Render Transform=True
+PlayerInfo_C.Clipping=True
+PlayerInfo_C.Navigation=True
+PlayerInfo_C.Localization=True
+Widget.Layout=True
+GridPanel.Layout=True
+GridPanel.Fill Rules=True
+GridPanel.Behavior=True
+GridPanel.Render Transform=True
+GridPanel.Performance=True
+GridPanel.Clipping=True
+GridPanel.Navigation=True
+GridPanel.Localization=True
 
 [/Script/UnrealEd.ClassViewerSettings]
 DisplayInternalClasses=True
@@ -1286,15 +1325,21 @@ SetMapState_5=StructProperty.DefaultValueCategory.None,
 EnumProperty=StructProperty.DefaultValueCategory.None,
 Map_C=StructProperty.DefaultValueCategory.None,
 ClampMapSize_4=StructProperty.DefaultValueCategory.None,
+PlayerInfo_C=StructProperty.DefaultValueCategory.None,
+SetMana=StructProperty.DefaultValueCategory.None,
+SetMana_4=StructProperty.DefaultValueCategory.None,
+AlterBar=StructProperty.DefaultValueCategory.None,
+AlterBar_5=StructProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/UMG/HUD/Map/Map
-MRUItem2=/Game/UMG/HUD/GameHUD
-MRUItem3=/Game/UMG/HUD/Map/ElevationMap
-MRUItem4=/Game/UMG/HUD/Map/MapDataStruct
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonHUD
-MRUItem6=/Game/UMG/HUD/MapInterface
+MRUItem0=/Game/UMG/HUD/PlayerInfo/PlayerInfo
+MRUItem1=/Game/UMG/HUD/GameHUD
+MRUItem2=/Game/UMG/HUD/Map/Map
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/UMG/HUD/Map/ElevationMap
+MRUItem5=/Game/UMG/HUD/Map/MapDataStruct
+MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonHUD
+MRUItem7=/Game/UMG/HUD/MapInterface
 
 [AssetEditorToolkitTabLocation]
 /Game/UMG/HUD/Map/MapDataStruct.MapDataStruct=0
@@ -1355,12 +1400,12 @@ CurveVisibility=SelectedCurves
 
 [DetailPropertyExpansion]
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" "
 ElevationMap_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget=
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
@@ -1378,6 +1423,9 @@ SetMapState_5=
 Button="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 Map_C=
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Render Transform.RenderTransform\" "
+GridPanel="\"Object.Fill Rules.ColumnFill\" \"Object.Fill Rules.RowFill\" \"Object.Render Transform.RenderTransform\" "
+PlayerInfo_C="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1396,6 +1444,7 @@ bSCCUseGlobalSettings=False
 
 [DetailCategoriesAdvanced]
 K2Node_FunctionEntry.Graph=True
+ProgressBar.Behavior=False
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
